# evaporative_cooling

./: .gitignore  CITATION.cff  LICENSE  README.md  bosones_1A.ipynb  dimensionless_plots.ipynb  environment.yml  evap_cool_data.py  evap_cool_dimensionless_usage.ipynb  evap_cool_thermo_usage.ipynb  evap_cool_thermo_usage_clean.ipynb  evap_cool_usage.ipynb  evap_cooling.py  evap_cooling_caja.ipynb  evap_cooling_cuadrupolo.ipynb  example_oscillator_plots.ipynb  fermiones_EC_V2.ipynb  generate_dimensionless_plots.py  pyproject.toml  reproduce_figures.py  requirements.txt  run_pipeline.py  test_evap_cooling.py
data/paper_run/: README.md  box2d_osc1d_bosons.json  box2d_osc1d_bosons_thermo.json  box2d_osc1d_fermions.json  box2d_osc1d_fermions_thermo.json  box2d_osc1d_mb.json  box2d_osc1d_mb_thermo.json  (+24 more)
evap_cool/: __init__.py  constants.py  evaporation.py  normalization.py  plots.py  plots_dimensionless.py  polylog.py  post_processing.py  recurrences.py  solvers.py  storage.py  zoom.py
general_sims/: functions.py
gpc_simulation/: evap_cool_utils_omega.py  evap_cooling_caja.ipynb  evap_cooling_cuadrupolo.ipynb  evap_cooling_oscilador.ipynb
notebooks/: compare_g_tilde.py  comparison_gtilde.py  evap_cool_utils.py  evap_cooling_caja.ipynb  evap_cooling_cuadrupolo.ipynb  evap_cooling_oscilador.ipynb  evap_cooling_utils.py  thermo_plots.py  thermodynamics.py
old_notebooks/: evap_cooling_oscilador.ipynb  file.csv
runs/: box_bosons.json  box_fermions.json  box_mb.json  osc_bosons.json  osc_fermions.json  osc_mb.json  quad_bosons.json  quad_fermions.json  quad_mb.json
(+35 files in other folders)
